--- a/cis3285_unit6_accountstart_f24/Components/Pages/Home.razor
+++ b/cis3285_unit6_accountstart_f24/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Home"
+@rendermode InteractiveServer
 @using Services;
 @using Domain;
 
@@ -7,7 +8,6 @@
 <label for="accountName">New Account Name:</label>
 <input type="text" id="accountName" name="accountName" @bind="newAccountName">
 <br>
-<button @onclick="TestButtonClick">Test Button</button>
 <button class="btn btn-primary" @onclick="btnAddAccount_Click">Add Account</button>
 
 <br>
@@ -43,10 +43,6 @@
 <br>
 
 @code {
-    private void TestButtonClick()
-    {
-        Console.WriteLine("Test button clicked!");
-    }
 
     private string newAccountName;              // name in the new account textbox
     private string selectedAccountName;         // account name selected from Acccout dropdown
@@ -102,9 +98,7 @@
         string accountName = newAccountName;
         acctService.CreateAccount(accountName, AccountType.Silver);
 
-        //accountList = acctService.GetAllAccounts();
-        // Create a new list to trigger UI re-render
-        accountList = new List<string>(accountList) { accountName };
+        accountList = acctService.GetAllAccounts();
 
         newAccountName = string.Empty; // Clear the input field
         StateHasChanged();
